<resources>
    <string name="app_name">mistickets74384229k</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_categorias">Categorias</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_tickets">Tickets</string>
    <string name = "nueva_cat_tit">Nueva Categoria</string>
    <string name = "form_hint_nombre">Nombre</string>
    <string name = "form_hint_desc1">Descripcion Corta</string>
    <string name = "form_hint_desc2">Descripcion Larga</string>
    <string name = "form_hint_img">Imagen</string>
    <string name = "form_btn_crearCat">Crear Categoria</string>
    <string name = "no_disponible">No esta disponible</string>
    <string name="desc_img_ticket">foto_ticket</string>
    <string name = "edit_cat">Editar Categoria</string>
    <string name = "nueva_tick_tit">Nuevo Ticket</string>
    <string name="ruta_de_la_imagen">Ruta de la imagen</string>
    <string name="guardar_ticket">Guardar Ticket</string>
    <string name="descripci_n_larga">Descripción larga</string>
    <string name="descripci_n_corta">Descripción corta</string>
    <string name="fecha_del_ticket">Fecha del ticket</string>
    <string name="precio">Precio</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="imagen_del_ticket">Imagen del ticket</string>
    <string name="textview">TextView</string>
    <string name="foto">Foto</string>
    <string name="txt_inicio">Bienvenido a mi practica espero disfrutes de la experiecia de usar esta practica tan chula. ALA MADRID!!</string>
</resources>